--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,9 @@
     <title>Title</title>
 </head>
 <body>
-    <h1>Hello,World!</h1>
-    <p>This is {{app}} test.</p>
+    <h1>This is {{app}} test.</h1>
+    <p><a href = "./accounts/admin/">管理サイト</a>へ<BR>
+        ※ユーザー名：test 　　パスワード：djangotestでログインできます。</p><p/>
+    <p><a href = "./shop/">BOOKリスト</a>へ</p>
 </body>
 </html>
